tests/machine/x/st/in_operator_extended.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T16:27:27Z
"
| m s xs ys |
xs := {1. 2. 3}.
ys := [ | tmp |
  tmp := OrderedCollection new.
  xs do: [:x |
    (((x % 2) = 1)) ifTrue: [
      tmp add: x.
    ].
  ].
  tmp
] value.
Transcript show: ((1 in ys)) printString; cr.
Transcript show: ((2 in ys)) printString; cr.
m := Dictionary from: {'a' -> 1}.
Transcript show: (('a' in m)) printString; cr.
Transcript show: (('b' in m)) printString; cr.
s := 'hello'.
Transcript show: (('ell' in s)) printString; cr.
Transcript show: (('foo' in s)) printString; cr.
